# indico-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/indico_mcp/: client.py  config.py  models.py  server.py
